--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@solana/web3.js": "^1.95.2",
+    "@web3icons/react": "^3.5.2",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.0",
